# swagger_server/controllers/salary_controller.py
@@ -19,7 +19,7 @@ def hour_all_salary_employee_id_calculation_get(employee_id):  # noqa: E501
 
 
 def hour_all_salary_employee_id_list_get(employee_id):  # noqa: E501
-    """Get Hour Salaries
+    """Get Total Hour Salary
 
      # noqa: E501
 
@@ -45,7 +45,46 @@ def hour_detail_salary_employee_id_calculation_get(employee_id):  # noqa: E501
 
 
 def hour_detail_salary_employee_id_list_get(employee_id):  # noqa: E501
-    """Get Hour Salaries
+    """Get Detail Hour Salary
+
+     # noqa: E501
+
+    :param employee_id: 
+    :type employee_id: int
+
+    :rtype: None
+    """
+    return 'do some magic!'
+
+
+def productivity_sum_employee_id_calculation_get(employee_id):  # noqa: E501
+    """Calculate productivity
+
+     # noqa: E501
+
+    :param employee_id: 
+    :type employee_id: int
+
+    :rtype: None
+    """
+    return 'do some magic!'
+
+
+def productivity_sum_salary_employee_id_calculation_get(employee_id):  # noqa: E501
+    """Calculate Salary by productivity
+
+     # noqa: E501
+
+    :param employee_id: 
+    :type employee_id: int
+
+    :rtype: None
+    """
+    return 'do some magic!'
+
+
+def productivity_sum_salary_employee_id_list_get(employee_id):  # noqa: E501
+    """Calculate productivity
 
      # noqa: E501
 
